--- a/public_bicycle/pubspec.yaml
+++ b/public_bicycle/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   barcode_widget: ^2.0.4
   qr_flutter: ^4.1.0
 
+  # 로그인 토큰 저장을 위한 Upgrade(Get_storage)
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
