근처 스테이션 정보

--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,dart,flutter,macos,windows,visualstudiocode
+python/API_KEY.py
